# ClashControl

./: .gitignore  AS_BUILT_DEVIATION.md  BRIDGE_GOVERNANCE.md  CHANGELOG.md  CLAUDE.md  CONNECTOR_PROTOCOL.md  DESIGN.md  FEATURE_RESEARCH.md  IMPROVEMENT_PLAN.md  INTERNALS.md  MCP_BUILD_GUIDE.md  MEMORY.md  OPEN_SOURCE_COMPONENTS.md  PERFORMANCE_NOTES.md  PLAN.md  README.md  REDUCER_DECOMPOSITION_PLAN.md  REVIT_ADDIN_GUIDE.md  REWRITE_UI_PLAN.md  TAURI.md  UI_OVERHAUL.md  V7_RELEASE_PLAN.md  analytics-consent.js  bridge-audit.js  bridge-governance.js  bridge-update.js  cc-runtime.js  clash-assignment-core.js  clash-classification-core.js  clash-discipline-core.js  clash-identity-core.js  clash-reconciliation-core.js  index.html  llms.txt  manifest.json  mcp-server.js  package.json  project-codec.js  renderer-contract.js  robots.txt  (+8 more)
addons/: accessibility.js  align.js  data-quality.js  geoplace.js  local-engine.js  openaec-bridge.js  pointcloud.js  pwa.js  revit-bridge.js  shared-project.js  smart-bridge.js  splat.js  tiles.js  training-data.js  visibility.js  wasm-engine.js
api/: _lib.js  health.js  nl.js  project.js  schema.sql  tile.js  title.js  training.js  triage.js
best-free-ifc-viewer/: index.html
data-quality-checker-online/: index.html
desktop/: README.md  build-dist.cjs  build-dist.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
developers/: index.html
docs/: CONNECTIVE_SPINE.md  scene-resident-set.md
free-bcf-viewer/: index.html
free-ifc-viewer-online/: index.html
free-navisworks-alternative/: index.html
(+186 files in other folders)
