[package]
name = "clashcontrol-desktop"
version = "0.1.0"
edition = "2021"
description = "ClashControl desktop shell — same single-file app, native ceilings"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
lto = true
strip = true
